# dipa-cumulo

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/benches/: diff_patch.rs
bench/src/: lib.rs
client/: Cargo.toml
client/src/: app.rs  lib.rs  store.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
