[package]
name = "bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "diff_patch"
harness = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dipa = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
postcard = { workspace = true }
