[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = "1"
postcard = { workspace = true }
cumulo-dipa = { workspace = true }

respo = "0.1"
respo_state_derive = "0.0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "ErrorEvent",
  "CloseEvent",
  "Location",
  "Storage",
  "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["v4", "js"] }
