[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
bincode = { workspace = true }
dipa = { workspace = true }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
